--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -10,8 +10,9 @@
     <ul>
        <% skills.forEach(function(t) { %>
          <li>
+         <a href="/skills/<%= t.id %>"><%= t.skill %></a>
              - 
-            <%= t.done ? 'done' : 'not done' %>
+            <%= t.skill %>
           </li>
         <% }); %>
     </ul>
