--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("../partials/header") %>
 <body>
     <h1>Skills</h1>
     <ul>
@@ -16,5 +10,5 @@
           </li>
         <% }); %>
     </ul>
-</body>
-</html>
+    <a href="/skills/new"> Create a Skill</a>
+    <%- include("../partials/footer") %>
