--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Skill</h1>
-<%= skills.skill  %>
+<%- include("../partials/header") %>
 
-</body>
-</html>
+    <h1>Skill</h1>
+<%= Skills.skill  %>
+<form action="/skills/<%= Skills.id %>?_method=DELETE" class="delete-form" method="POST">
+    
+    <button type="submit">X</button>
+</form>
+<%- include("../partials/footer") %>
